# tach

./: .gitattributes  .gitignore  .perdureignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXTERNAL_AGENTS.md  PERDURE_AGENT.md  Perdurefile  README.md  THREAT_MODEL.md  install.sh
.github/workflows/: ci.yml  release.yml
corpus/: README.md
corpus/field_typo/src/: account.tach
corpus/field_typo/tests/: account_test.pdr  account_test.tach
corpus/missing_import/src/: notify.tach
corpus/missing_import/tests/: notify_test.pdr
corpus/non_exhaustive/src/: light.pdr
corpus/non_exhaustive/tests/: light_test.pdr  light_test.tach
corpus/undeclared_effect/src/: audit.pdr
corpus/undeclared_effect/tests/: audit_test.pdr  audit_test.tach
corpus/unknown_variant/src/: light.pdr
corpus/unknown_variant/tests/: light_test.pdr
corpus/wrong_return/src/: calc.tach
corpus/wrong_return/tests/: calc_test.pdr  calc_test.tach
docs/: ARCHITECTURE.md  DOGFOOD.md  LANGUAGE.md
editors/vscode/: .vscodeignore  README.md  extension.js  language-configuration.json  offsets.js  package.json
editors/vscode/syntaxes/: perdure.tmLanguage.json
editors/vscode/test/: offsets.test.js
fixtures/existing-js/: package.json
fixtures/existing-rust/: Cargo.toml  check.sh
fixtures/existing-rust/src/: lib.rs
schemas/: agent-context.schema.json  approval.schema.json  bench.schema.json  diagnostic.schema.json  event.schema.json  goal.schema.json  guard-audit.schema.json  guard-commit.schema.json  guard-context.schema.json  guard-diff.schema.json  guard-next.schema.json  guard-status.schema.json  guard-verify.schema.json  patch.schema.json  receipt.schema.json  run.schema.json  test.schema.json
scripts/: action_e2e.sh  agent_interface_e2e.sh  e2e.sh  goal_e2e.sh  guard_e2e.sh  http_e2e.sh  plan_e2e.sh  real_shell_e2e.sh  user_plan_e2e.sh
src/: action.rs  adopt.rs  agent.rs  ast.rs  builtins.rs  check.rs  cli.rs  diagnostics.rs  event.rs  fmt.rs  goal.rs  guard.rs  hash.rs  http.rs  interp.rs  lexer.rs  lib.rs  main.rs  mcp.rs  parser.rs  patch.rs  plan.rs  program.rs  project.rs  render.rs  runner.rs  runtime.rs  schema.rs  shell.rs  snapshot.rs  source.rs  span.rs  store.rs  token.rs  tool.rs  trace.rs  types.rs  value.rs
tests/: coding_e2e.rs
