[package]
name = "tach"
version = "0.1.0"
edition = "2021"
description = "Tach — a typed goal runtime for long-horizon agents. The fastest path from a failing goal to a verified result."
license = "MIT"
authors = ["Robert"]

# The repo carries sample "existing" repos under fixtures/ (each with its own
# Cargo.toml/package.json) used by the coding-harness e2e. Excluding them keeps
# cargo from ever treating those nested manifests as packages of this crate.
[workspace]
exclude = ["fixtures"]

[[bin]]
name = "tach"
path = "src/main.rs"

[lib]
name = "tach"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unix-only: process-group control so a timed-out command and every descendant
# it spawned are killed together (see src/shell.rs). std alone can kill the
# direct child but cannot signal a process group.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
strip = true
