[package]
name = "perdure"
version = "0.2.0-alpha.1"
edition = "2021"
rust-version = "1.82"
description = "Durable, exactly-once execution for agent workflows: typed goals with enforced authority, receipts, approvals, crash-safe resume, and replay."
license = "MIT"
authors = ["Robert"]
repository = "https://github.com/robzilla1738/perdure"
homepage = "https://github.com/robzilla1738/perdure"
readme = "README.md"
keywords = ["agents", "durable-execution", "workflow", "runtime", "language"]
categories = ["command-line-utilities", "development-tools"]
# Keep the published crate slim: corpora, fixtures, e2e scripts, and editor
# tooling matter to the repo, not to `cargo install perdure`.
exclude = [
    "corpus/",
    "fixtures/",
    "tests/",
    "scripts/",
    "docs/",
    "editors/",
    ".github/",
]

# The repo carries sample "existing" repos under fixtures/ (each with its own
# Cargo.toml/package.json) used by the coding-harness e2e. Excluding them keeps
# cargo from ever treating those nested manifests as packages of this crate.
[workspace]
exclude = ["fixtures"]

[[bin]]
name = "perdure"
path = "src/main.rs"

[lib]
name = "perdure"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The plan language's `call http.get/http.post` tools. ureq because it is
# synchronous (fits the blocking runtime — no async reactor enters the tree)
# and pure Rust over rustls (static musl builds need no system OpenSSL or
# /etc/ssl). Redirects are disabled at the call site: following one would let
# an allowed URL bounce to a forbidden one. This is the ONLY network code in
# the binary; src/http.rs is its single home.
ureq = { version = "2", default-features = false, features = ["tls"] }

# Unix-only: process-group control so a timed-out command and every descendant
# it spawned are killed together (see src/shell.rs). std alone can kill the
# direct child but cannot signal a process group.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-only: a true atomic file replace (MoveFileExW with
# MOVEFILE_REPLACE_EXISTING) for the durable store — std's rename refuses to
# overwrite, and remove-then-rename leaves a crash window where a receipt is
# missing, which would re-run a side effect (see src/store.rs).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[profile.release]
lto = true
opt-level = 3
panic = "abort"
strip = true
